<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="?attr/materialCardViewElevatedStyle"
        app:cardBackgroundColor="@color/md_theme_light_onPrimary"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_user_management"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                />

            <!-- Input Nombre -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input Nombre Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Input Edad -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/user_age">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/btnAdd"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:layout_marginHorizontal="5dp"
                    />

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/btnDelete"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginHorizontal="5dp"
                    />

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/btnShow"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all"
                    android:layout_marginHorizontal="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>